milli/src/search/new/tests/snapshots/milli__search__new__tests__proximity__proximity_prefix_db-14.snap
---
source: milli/src/search/new/tests/proximity.rs
expression: "format!(\"{document_scores:#?}\")"
---
[
    [
        Proximity(
            Rank {
                rank: 8,
                max_rank: 8,
            },
        ),
    ],
    [
        Proximity(
            Rank {
                rank: 7,
                max_rank: 8,
            },
        ),
    ],
    [
        Proximity(
            Rank {
                rank: 6,
                max_rank: 8,
            },
        ),
    ],
    [
        Proximity(
            Rank {
                rank: 6,
                max_rank: 8,
            },
        ),
    ],
    [
        Proximity(
            Rank {
                rank: 5,
                max_rank: 8,
            },
        ),
    ],
    [
        Proximity(
            Rank {
                rank: 1,
                max_rank: 8,
            },
        ),
    ],
    [
        Proximity(
            Rank {
                rank: 1,
                max_rank: 8,
            },
        ),
    ],
    [
        Proximity(
            Rank {
                rank: 1,
                max_rank: 8,
            },
        ),
    ],
]
